--- a/games/media/css/undum.css
+++ b/games/media/css/undum.css
@@ -6,21 +6,24 @@ body {
     background-attachment: fixed;
     overflow-y: scroll;
 }
+
+/* Basic structure */
 #page {
-    width: 56em;
     margin: 0 auto;
     position: relative;
 }
-#menu {
-    display: none;
+#mid_panel {
+    margin: 0 10.5em;
 }
+
+/* The title block */
 #title, #title .label, #content, .tools {
     border-radius: 2px;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
 }
 #title {
-    width: 28em;
+    max-width: 28em;
     background: #e6e6c6 url("../img/title_bg.jpg") repeat -1.1em -1.1em;
     margin: 2.2em auto 1.1em auto;
     padding: 1.7em;
@@ -28,10 +31,11 @@ body {
     cursor: pointer; /* Until we click to start. */
 }
 #title .label {
-    width: 17em;
+    overflow: hidden;
     background: #e6e6c6 url("../img/text_bg.jpg") repeat left top;
     padding: 2.8em;
     margin: auto;
+    max-width: 18em;
     -moz-box-shadow: 0 0 16px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0 0 16px rgba(0,0,0,0.75);
     box-shadow: 0 0 16px rgba(0,0,0,0.75);
@@ -70,19 +74,20 @@ body {
     margin: 0 -0.2em;
 }
 #title .click_message {
-    margin: 0 auto;
+    left: 0;
+    right: 0;
     bottom: 0;
     position: absolute;
     font-size: 0.9em;
     font-style: italic;
     text-align: center;
-    width: 17em;
     color: #987;
 }
 
-#content {
+/* Main content */
+#content_wrapper {
+    max-width: 28em;
     position: relative;
-    width: 28em;
     background: #e6e6c6 url("../img/text_bg.jpg") repeat left top;
     margin: 0.6em auto 1.1em auto;
     padding: 2.8em;
@@ -188,8 +193,11 @@ img.float_left {
 
 #tools_wrapper {
     position: fixed;
+    max-width: 56em;
+    top: 2.2em;
+    left: 0.4em;
+    right: 0.4em;
     margin: 0 auto;
-    width: 56em;
     display: none; /* Shown by Javascript */
 }
 .tools {
@@ -245,7 +253,6 @@ img.float_left {
 
 #legal {
     color: #654;
-    width: 33em;
     margin: 0 auto;
     padding-bottom: 2.2em;
     display: none; /* Shown by Javascript */
@@ -338,5 +345,8 @@ img.float_left {
     float: right;
 }
 #content_library, #ui_library {
+    display: none;
+}
+#menu {
     display: none;
 }
